<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="290dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="1"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/name1"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/player1"
            android:textAlignment="center"
            android:textColor="@color/player1"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/score1"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:text="00"
            android:textAlignment="center"
            android:textColor="@color/player1"
            android:textSize="150sp"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="70dp" />


        <TextView
            android:id="@+id/cot"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="40dp"
            android:text=":"
            android:textAlignment="center"
            android:textSize="150sp"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/name2"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="350dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="20dp"
            android:text="@string/player2"
            android:textAlignment="center"
            android:textColor="@color/player2"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/score2"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="350dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="40dp"
            android:text="00"
            android:textAlignment="center"
            android:textColor="@color/player2"
            android:textSize="150sp"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="70dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="Question 1"
            android:textAlignment="center"
            android:textColor="@color/phase"
            android:textSize="70sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="20dp"
            android:alpha="100"
            app:srcCompat="@drawable/phase1" />

        <TextView
            android:id="@+id/phase1Intro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/phase"
            android:text="@string/phase1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="20dp"
            android:alpha="0"
            app:srcCompat="@drawable/phase2" />
        <TextView
            android:id="@+id/phase2Intro"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:textAlignment="center"
            android:alpha="0"
            android:textColor="@color/phase"
            android:text="@string/phase2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="330dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="20dp"
            android:alpha="0"
            app:srcCompat="@drawable/phase3" />
        <TextView
            android:id="@+id/phase3Intro"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="330dp"
            android:layout_marginLeft="180dp"
            android:textAlignment="center"
            android:alpha="0"
            android:textColor="@color/phase"
            android:text="@string/phase3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="480dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="20dp"
            android:alpha="0"
            app:srcCompat="@drawable/phase4" />
        <TextView
            android:id="@+id/phase4Intro"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="480dp"
            android:layout_marginLeft="180dp"
            android:textAlignment="center"
            android:alpha="0"
            android:textColor="@color/phase"
            android:text="@string/phase4" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="175dp"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginStart="275dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="175dp"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginStart="425dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="175dp"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar" />

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="311dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">


        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:alpha="1"
            android:layout_marginLeft="0dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/questionTime"
                android:textAlignment="center"
                android:textColor="@color/phase"
                android:textSize="70sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginStart="245dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/go_button_shape"
                android:shadowRadius="0"
                android:text="@string/start"
                android:textColor="@color/phase"
                android:textSize="40sp" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:alpha="0">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/vieTime"
                android:textAlignment="center"
                android:textColor="@color/phase"
                android:textSize="70sp" />
            <TextView
                android:id="@+id/vieCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="3"
                android:textAlignment="center"
                android:textColor="@color/phase"
                android:textSize="90sp" />



        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:alpha="0">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="52dp"
                android:text="Answer Time!"
                android:textAlignment="center"
                android:textColor="@color/phase"
                android:textSize="50sp"
                android:layout_marginLeft="52dp" />
            <TextView
                android:id="@+id/answerCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="3"
                android:textAlignment="center"
                android:textColor="@color/phase"
                android:textSize="90sp" />

            <ImageButton
                android:id="@+id/correctButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="150dp"
                android:layout_marginStart="50dp"
                android:background="@color/colorWhite"
                app:srcCompat="@drawable/correct"
                android:layout_marginLeft="50dp" />

            <ImageButton
                android:id="@+id/wrongButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="150dp"
                android:layout_marginStart="400dp"
                android:background="@color/colorWhite"
                app:srcCompat="@drawable/wrong"
                android:layout_marginLeft="400dp" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:alpha="0">
            <TextView
                android:id="@+id/question_result"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="52dp"
                android:text="@string/question_result_no"
                android:textAlignment="center"
                android:textColor="@color/phase"
                android:textSize="40sp"
                android:layout_marginLeft="52dp" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="240dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/go_button_shape"
                android:shadowRadius="0"
                android:text="@string/next"
                android:textColor="@color/phase"
                android:textSize="40sp" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/timer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="@dimen/cardview_default_elevation"
        android:layout_marginTop="100dp"
        android:text="3"
        android:textColor="@color/phase"
        android:textAlignment="center"
        android:textSize="300dp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
